# python-technical-test

./: .env  .flake8  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
app/: config.py  main.py
app/api/: __init__.py  groups.py  sites.py
app/infrastructure/: db.py
app/infrastructure/migrations/: env.py
app/infrastructure/migrations/versions/: 2025_07_20_1938-362c125d50cf_initial.py
app/infrastructure/models/: __init__.py  enums.py  site_group.py
app/schemas/: __init__.py  group.py  site.py
app/services/: __init__.py  base.py  groups.py  sites.py
tests/: conftest.py
tests/e2e/: test_groups.py  test_sites.py
