[tool.poetry]
name = "test-energy-bid-API"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.1"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.3.7"
pytest="^8.4.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.5"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
skip_magic_trailing_comma = true

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
lint.select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "ERA", # eradicate
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "RUF"  # Ruff-specific rules
    ]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
pythonpath = "app"
addopts = []
env = [
    "ENV=TESTING"
]
